--- a/u2s6.html
+++ b/u2s6.html
@@ -131,7 +131,7 @@
 
       <h3>2.6 Tables and Graphs</h3>
 <ol>
-    <p><b>Frequency Table – Average Teacher Salaries by State 2012-2013</b></p>
+    <p><b>Frequency Table – Average Teacher Salaries by State 2020-2021</b></p>
 
     <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;}
@@ -146,34 +146,34 @@
             <th class="tg-13pz" scope="col">Relative Frequency</th>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">&lt;$45,000</th>
-            <td class="tg-13pz"><p class="solution">2</p></td>
-            <td class="tg-13pz"><p class="solution">4%</p></td>
-          </tr>
-          <tr>
-            <th class="tg-13pz" scope="row">$45,000 to $50,000</th>
-            <td class="tg-13pz"><p class="solution">15</p></td>
-            <td class="tg-13pz"><p class="solution">30%</p></td>
+            <th class="tg-13pz" scope="row">&lt;$50,000</th>
+            <td class="tg-13pz"><p class="solution">3</p></td>
+            <td class="tg-13pz"><p class="solution">6%</p></td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">$50,000 to $55,000</th>
-            <td class="tg-13pz"><p class="solution">12</p></td>
-            <td class="tg-13pz"><p class="solution">24%</p></td>
+            <td class="tg-13pz"><p class="solution">17</p></td>
+            <td class="tg-13pz"><p class="solution">33%</p></td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">$55,000 to $60,000</th>
-            <td class="tg-13pz"><p class="solution">7</p></td>
-            <td class="tg-13pz"><p class="solution">14%</p></td>
+            <td class="tg-13pz"><p class="solution">8</p></td>
+            <td class="tg-13pz"><p class="solution">16%</p></td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">$60,000 to $65,000</th>
-            <td class="tg-13pz"><p class="solution">5</p></td>
-            <td class="tg-13pz"><p class="solution">10%</p></td>
+            <td class="tg-13pz"><p class="solution">8</p></td>
+            <td class="tg-13pz"><p class="solution">16%</p></td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">&gt;$65,000</th>
-            <td class="tg-13pz"><p class="solution">9</p></td>
-            <td class="tg-13pz"><p class="solution">18%</p></td>
+            <th class="tg-13pz" scope="row">$65,000 to $70,000</th>
+            <td class="tg-13pz"><p class="solution">3</p></td>
+            <td class="tg-13pz"><p class="solution">6%</p></td>
+          </tr>
+          <tr>
+            <th class="tg-13pz" scope="row">&gt;$70,000</th>
+            <td class="tg-13pz"><p class="solution">12</p></td>
+            <td class="tg-13pz"><p class="solution">24%</p></td>
           </tr>
         </table>
 
@@ -184,7 +184,7 @@
 
     <p style="page-break-before: always"></p>
 
-<p><b>Frequency Table – U.S. Vehicle Sales September 2015</b></p>
+<p><b>Frequency Table – U.S. Vehicle Sales October 2022</b></p>
 <p>
 
 
@@ -197,33 +197,62 @@
     </style>
     <table summary="U. S. Vehicle sales in September 2015.  Column headers are type of vehicle, number sold, and relative frequency.  Row headers are types of vehicles." class="tg">
         <tr>
-          <th class="tg-13pz" scope="col">Type of Vehicle</th>
+          <th class="tg-13pz" scope="col">Company</th>
           <th class="tg-13pz" scope="col">Number Sold</th>
           <th class="tg-13pz" scope="col">Relative Frequency</th>
         </tr>
         <tr>
-          <th class="tg-13pz" scope="row">Cars</th>
-          <td class="tg-13pz">619,109</td>
-          <td class="tg-13pz"><p class="solution">44%</p></td>
+          <th class="tg-13pz" scope="row">Toyota</th>
+          <td class="tg-13pz">165,570</td>
+          <td class="tg-13pz"><p class="solution">26%</p></td>
         </tr>
         <tr>
-          <th class="tg-13pz" scope="row">Pickup Trucks</th>
-          <td class="tg-13pz">214,743</td>
-          <td class="tg-13pz"><p class="solution">15%</p></td>
+          <th class="tg-13pz" scope="row">Ford</th>
+          <td class="tg-13pz">158,327</td>
+          <td class="tg-13pz"><p class="solution">25%</p></td>
         </tr>
         <tr>
-          <th class="tg-13pz" scope="row">SUV/Crossovers</th>
-          <td class="tg-13pz">529,817</td>
-          <td class="tg-13pz"><p class="solution">38%</p></td>
+          <th class="tg-13pz" scope="row">Honda</th>
+          <td class="tg-13pz">72,409</td>
+          <td class="tg-13pz"><p class="solution">11%</p></td>
         </tr>
         <tr>
-          <th class="tg-13pz" scope="row">Minivans</th>
-          <td class="tg-13pz">43,877</td>
+          <th class="tg-13pz" scope="row">Hyundai</th>
+          <td class="tg-13pz">60,604</td>
+          <td class="tg-13pz"><p class="solution">10%</p></td>
+        </tr>
+        <tr>
+          <th class="tg-13pz" scope="row">Kia</th>
+          <td class="tg-13pz">58,276</td>
+          <td class="tg-13pz"><p class="solution">9%</p></td>
+        </tr> <tr>
+          <th class="tg-13pz" scope="row">Subaru</th>
+          <td class="tg-13pz">48,568</td>
+          <td class="tg-13pz"><p class="solution">8%</p></td>
+        </tr> <tr>
+          <th class="tg-13pz" scope="row">Mazda</th>
+          <td class="tg-13pz">25,319</td>
+          <td class="tg-13pz"><p class="solution">4%</p></td>
+        </tr> <tr>
+          <th class="tg-13pz" scope="row">Lexus</th>
+          <td class="tg-13pz">21,797</td>
           <td class="tg-13pz"><p class="solution">3%</p></td>
+        </tr> <tr>
+          <th class="tg-13pz" scope="row">Acura</th>
+          <td class="tg-13pz">9,136</td>
+          <td class="tg-13pz"><p class="solution">1%</p></td>
+        </tr> <tr>
+          <th class="tg-13pz" scope="row">Lincoln</th>
+          <td class="tg-13pz">7,196</td>
+          <td class="tg-13pz"><p class="solution">1%</p></td>
+        </tr> <tr>
+          <th class="tg-13pz" scope="row">Genesis</th>
+          <td class="tg-13pz">4,353</td>
+          <td class="tg-13pz"><p class="solution">1%</p></td>
         </tr>
         <tr>
           <th class="tg-13pz" scope="row">Total</th>
-          <td class="tg-13pz"><p class="solution">1,407,546</p></td>
+          <td class="tg-13pz"><p class="solution">631,555</p></td>
           <td class="tg-13pz"><p class="solution">100%</p></td>
         </tr>
       </table>
@@ -287,11 +316,15 @@
             <th class="tg-13pz" scope="row">2010</th>
             <td class="tg-13pz">12.2</td>
           </tr>
+          <tr>
+            <th class="tg-13pz" scope="row">2020</th>
+            <td class="tg-13pz">13.5</td>
+          </tr>
         </table>
 
 </p>
 
-<li>Create a time series graph showing the percentage of U.S. population that is foreign-born from 1940 to 2010.</li>
+<li>Create a time series graph showing the percentage of U.S. population that is foreign-born from 1940 to 2020.</li>
 
 <p class="solution"><img src="images/u2s6p5.png" alt="A time series graph for the percentage of the U.S. population that is foreign-born. The horizontal axis represents the years and goes from 1930 to 2020. The vertical axis represents the percentage of the total population and goes from 0 to 14. There are several points plotted and connected on the graph. The points are (1940,8.8), (1950,6.9), (1960,5.4), (1970,4.7), (1980,6.2), (1990,8.0), (2000,10.4), (2010,12.2). The line decreases from 1940 to 1970 and then increases to the last point at 2010. "></p>
 
