--- a/u2s6.html
+++ b/u2s6.html
@@ -195,7 +195,7 @@
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
     </style>
-    <table summary="U. S. Vehicle sales in September 2015.  Column headers are type of vehicle, number sold, and relative frequency.  Row headers are types of vehicles." class="tg">
+    <table summary="U. S. Vehicle sales in October 2022.  Column headers company, number sold, and relative frequency.  Row headers are companies." class="tg">
         <tr>
           <th class="tg-13pz" scope="col">Company</th>
           <th class="tg-13pz" scope="col">Number Sold</th>
@@ -262,11 +262,11 @@
 
 </p>
 
-<li>Create a pie chart showing percentages of each type of vehicle sold in September 2015.</li>
-<p class="solution"><img src="images/u2s6p3.png" alt="A pie chart showing the percentages of U.S. Vehicle Sales for September 2015. The largest part of the circle is cars at 44% of the total vehicle sales. The next largest part of the circle is the SUV/Crossovers at 38%. Pickup trucks represent 15% of total sales and minivans represent 3% of total sales. "></p>
+<li>Create a pie chart showing percentages of each type of vehicle sold in the United States in October 2022.</li>
+<p class="solution"><img src="images/u2s6p3.png" alt="A pie chart showing the percentages of U.S. Vehicle Sales for October 2022. Toyota sold 26%, Ford 25%, Honda 11%, Hyundai 10%, Kia 9%, Subaru 8%, Mazda 4%, Lesus 3%, Lincoln 1%, Genesis 1%, and Acura 1%.  "></p>
 
-<li>Create a bar graph showing vehicles sold in September 2015.</li>
-<p class="solution"><img src="images/u2s6p4.png" alt="A bar graph representing the total U.S. vehicle sales for September 2015. The horizontal axis represents the type of vehicle. The vertical axis represents the number sold and goes from 0 to 700,000 counting by 100,000. The number of cars sold was 619,109. The number of pickup trucks sold was 214,743. The number of SUV/Crossovers sold was 529,817 and the number of minivans sold was 43,877. "></p>
+<li>Create a bar graph showing vehicles sold in the United States in October 2022.</li>
+<p class="solution"><img src="images/u2s6p4.png" alt="A bar graph representing the total U.S. vehicle sales for October 2022. The horizontal axis represents the companies. The vertical axis represents number of cars sold by each company starting at 0, counting by 20,000, and ending at 180,000. From left to right on the graph Toyota sold 165570, Ford 158327, Honda 72409, Hyundai 60604, Kia 58276, Subaru 48568, Mazda 25319, Lexus 21797, Acura 9136, Lincoln 7196, and Genesis 4353. "></p>
 
 <p style="page-break-before: always"></p>
 
@@ -326,7 +326,7 @@
 
 <li>Create a time series graph showing the percentage of U.S. population that is foreign-born from 1940 to 2020.</li>
 
-<p class="solution"><img src="images/u2s6p5.png" alt="A time series graph for the percentage of the U.S. population that is foreign-born. The horizontal axis represents the years and goes from 1930 to 2020. The vertical axis represents the percentage of the total population and goes from 0 to 14. There are several points plotted and connected on the graph. The points are (1940,8.8), (1950,6.9), (1960,5.4), (1970,4.7), (1980,6.2), (1990,8.0), (2000,10.4), (2010,12.2). The line decreases from 1940 to 1970 and then increases to the last point at 2010. "></p>
+<p class="solution"><img src="images/u2s6p5.png" alt="A time series graph for the percentage of the U.S. population that is foreign-born. The horizontal axis represents the years and goes from 1930 to 2030. The vertical axis represents the percentage of the total population and goes from 0 to 14. There are several points plotted and connected on the graph. The points are (1940,8.8), (1950,6.9), (1960,5.4), (1970,4.7), (1980,6.2), (1990,8.0), (2000,10.4), (2010,12.2), and (2020, 13.5). The line decreases from 1940 to 1970 and then increases to the last point at 2020. "></p>
 
 
 
