--- a/u1s2.html
+++ b/u1s2.html
@@ -195,7 +195,7 @@
           
   
             <li>If Sue gave away three fifths of her collection, how many coins would that be?</li>
-            <p class="solution"> \( \frac35\cdot180=108\) silver dollars</p>
+            <p class="solution"> \( \frac35\cdot180=108\) coins</p>
            
             </ol>
           </li>
