--- a/u4s4.html
+++ b/u4s4.html
@@ -287,7 +287,7 @@
     <p>It’s summer and Jill is filling her above ground pool. It takes 25 minutes to raise the water level 4 inches.  The water level is already 10 inches. What is the rate Jill is filling the pool in inches per minute?</p>
     <p class="solution">\( \begin{equation} \frac{4 \text{ inches}}{25 \text{ minutes}} = 0.16 \text{ inches per minute} \end{equation} \) </p>
       
-      <p>Write an equation for the depth of the pool depending on time.</p>
+      <p>Write an equation for the depth of the water in the pool depending on time.</p>
     <p class="solution">\( \begin{equation}y = 10 + 0.16x \text{ or } y = 10 + \frac{4}{25} x \end{equation} \)</p>
 
     <div class="row">
