--- a/u2review.html
+++ b/u2review.html
@@ -221,18 +221,18 @@
     </ol>
     
 </li>
-<li>The following boxplot shows the heights of boys and girls in a private school with grades 5-12. 
+<li>The following boxplot shows the ages of team members on two softball teams. 
   <br>
   <br>
-    <p><img src="images/u2reviewp10.png" width="800" height="120" alt="There are two boxs plots. The scale for both of them is from 130 cm to 19 cm counting by 10. The left whisker for the boys is at 137.5, the left side of the box is at 158, the median is at 172, the right side of the box is at 18 and the right whisker is at 186.5. The left whisker for the girls is at 134, the left side of the box is at 155, the median is at 166, the right side of the box is at 172.5 and the right whisker is at 178. "></p>
+    <p><img src="images/u2reviewp10.png" alt="There are two boxs plots. The scale for both of them is from 18 to 34 years counting by 2. The left whisker for the Team A is at 22, the left side of the box is at 24, the median is at 25, the right side of the box is at 28 and the right whisker is at 34. The left whisker for Team B is at 18, the left side of the box is at 22, the median is at 25, the right side of the box is at 28 and the right whisker is at 30. "></p>
     <ol>
-        <li>What is the median boys’ height?</li>
-        <p class="solution">172 cm</p>
-        <li>Do boys or girls have the largest range in heights?</li>
-        <p class="solution">boys</p>
-        <li>True or False:  25% of boys are taller than 180 cm.</li>
+        <li>What is the median age for Team A?</li>
+        <p class="solution">25 years old</p>
+        <li>Does Team A or Team B have the largest range in ages?</li>
+        <p class="solution">They are the same.</p>
+        <li>True or False:  25% of Team B is younger than Team A.</li>
         <p class="solution">true</p>
-        <li>True or False:  The majority of girls are taller than 165 cm.</li>
+        <li>True or False:  The majority of Team A is older than 24.</li>
         <p class="solution">true</p>
     </ol>
 </li>
