--- a/u2s4.html
+++ b/u2s4.html
@@ -248,43 +248,36 @@
 <p>Type of Study</p>
 <p class="solution">Experimental</p>
 <p style="page-break-before: always"></p>
-<p><b>Voters Still See America As a Special Place</b></p>
+<p><b>Harvard Youth Poll</b></p>
 
-<p>Wednesday, February 08, 2017</p>
+<p>March 28, 2023</p>
 
 <p>Voters now believe even more strongly that the United States is special among the nations of the world.</p>
 
-<p>A new Rasmussen Reports national telephone and online survey finds that 69% of Likely U.S. Voters think the United States is more exceptional than other nations. This is up significantly from 57% <a href= "http://www.rasmussenreports.com/public_content/politics/general_politics/february_2015/do_voters_believe_obama_loves_america" target="_blank">two years ago.</a> Just 20% disagree, while 10% are not sure. (Question wording:  Is the United States more exceptional than other nations?)</p>
+<p>For over twenty years, the Harvard Public Opinion Project has provided the most comprehensive look at the political opinions and voting trends held by Gen Z and Millennials. </p>
+<p>A national poll of America’s 18-to-29-year-olds conducted between March 13 and March 23, 2023 by the Institute of Politics at Harvard Kennedy School indicates that more than three-in-five (63%) believe our gun laws should be stricter -- including a majority of young people in college and not in college; a majority of young white, Black, Hispanic and Asian-Americans; a majority of males and females; and a majority of those living in urban areas, suburbs, and small towns.   </p>
 
-<p>The survey of 1,000 Likely Voters was conducted on February 6-7, 2017 by Rasmussen Reports. The margin of sampling error is \(\pm 3\) percentage points with a 95% level of confidence. Field work for all Rasmussen Reports surveys is conducted by <a href="http://www.pulseopinionresearch.com/" target="_blank" >Pulse Opinion Research, LLC.</a> </p>
+<p>This poll of 2,069 18-to-29-year-olds was organized with undergraduate students from the Harvard Public Opinion Project (HPOP) and supervised by John Della Volpe, IOP Director of Polling. Data were collected by Ipsos Public Affairs using the KnowledgePanel Calibration approach. In this approach, the calibrating sample was provided by the KnowledgePanel probability-based sample source (n=1,033), while the sample to be calibrated was provided by non-probability, opt-in web panel sample sources (n=1,036). Interviews were conducted in English and Spanish between March 13 and March 23, 2023. The target population for this survey is US residents between the ages of 18 and 29. Data are weighted to reflect population estimates based on age-group, race, Hispanic ethnicity, educational attainment, household income, urbanicity, and geographic region of residence.  The margin of error for the total sample is +/- 2.86%. </p>
 
-<p>Source: <a href="http://www.rasmussenreports.com/public_content/politics/general_politics/february_2017/voters_still_see_america_as_a_special_place" target="_blank"> Rasmussen Reports Website Source</a></p>
+<p>Source: <a href="https://iop.harvard.edu/youth-poll/spring-2023-harvard-youth-poll-gun-safety-findings" target="_blank"> Harvard Kennedy School Institute of Politics</a></p>
 
 <p>Population</p>
-<p class="solution">All registered voters</p>
+<p class="solution">18-29 year-olds</p>
 <p>Sample</p>
-<p class="solution">1,000 likely voters</p>
+<p class="solution">2069 18-29 years-olds</p>
 <p>Sample Statistics</p>
-<p class="solution">69% think that the U.S. is more exceptional than other nations, compared to 57% two years ago. 20% disagree. 10% are unsure.</p>
+<p class="solution">696% believe gun laws should be stricter</p>
 <p>Sampling Methods</p>
-<p class="solution">Simple random</p>
+<p class="solution">Stratified</p>
 
 <p>Type of Study</p>
 <p class="solution">Observational</p>
 <p>Confidence Interval</p>
-<p class="solution">66% to 72%</p>
+<p class="solution">63%&#177;2.86% = 60.14%-65.86%</p>
 
-<p style="page-break-before: always"></p>
 
-<p>Data for Rasmussen Reports survey research is collected using an automated polling methodology. Calls are placed to randomly-selected phone numbers through a process that ensures appropriate geographic representation. Typically, calls are placed from 5 pm to 9 pm local time during the week. Saturday calls are made from 11 am to 6 pm local time and Sunday calls from 1 pm to 9 pm local time. To reach those who have abandoned traditional landline telephones, Rasmussen Reports uses an online survey tool to interview randomly selected participants from a demographically diverse panel.</p>
 
-<p>After the surveys are completed, the raw data is processed through a weighting program to ensure that the sample reflects the overall population in terms of age, race, gender, political party, and other factors. The processing step is required because different segments of the population answer the phone in different ways. For example, women answer the phone more than men, older people are home more and answer more than younger people, and rural residents typically answer the phone more frequently than urban residents.</p>
 
-<p>For surveys of all adults, the population targets are determined by census bureau data.</p>
-
-<p>For political surveys, census bureau data provides a starting point and a series of screening questions are used to determine likely voters. The questions involve voting history, interest in the current campaign, and likely voting intentions.</p>
-
-<p><b>In a sample of 500 city voters, 45% said they will vote for Mr. Alpha, 51% said they will vote for Ms. Beta and 4% will vote for someone else. If the margin of error is \(\pm 3\) percentage points, can we say with confidence that Ms. Beta is ahead?</b></p>
 
 
 
