--- a/u4review.html
+++ b/u4review.html
@@ -221,10 +221,10 @@
 <li>	A 3-month-old Australian Shepherd female puppy weighed 12 pounds. When she was 3 years old, she weighed 45 pounds. Find the average rate of change and explain its meaning within the context of this scenario.</li>
 <p class="solution">The rate of change is equal to 1. The puppy was gaining one pound per month.</p>
 
-<li>How many male doctors work at the hospital?</li>
+<li>How many doctors who are over 35 work at the hospital?</li>
 <p class="solution">150</p>
 
-<img src="images/u4reviewp7.png" alt="A Venn Diagram titled with two intersecting circles. One circle represents the number of doctors and the other circle represents the number of women. The number 20 is in the intersection of the circles. The number 150 is in the doctors circle and the number 275 is in the women circle. The number 162 is outside both circles."> 
+<img src="images/u4reviewp7.png" alt="A Venn Diagram titled with two intersecting circles. One circle represents the number of doctors and the other circle represents the number of  staff who are under 35. The number 20 is in the intersection of the circles. The number 150 is in the doctors circle and the number 275 is in the under 35 circle. The number 162 is outside both circles."> 
 
 <p style="page-break-before: always"></p>
 
