--- a/u1fs.html
+++ b/u1fs.html
@@ -146,27 +146,34 @@
 
    <br>
    <br>
-<h4>Simple Interest</h4>  
+   <font size="6">
+<h4><b><u>Simple Interest</u></b></h4>  </font>
 <font size="6">
   \(I=P \times R \times T\)</font>
 <br>
 <br>
 <br>
-<h4>Compound Interest</h4>
+<font size="6">
+<h4><b><u>Two Compound Interest Formulas</u></b></h4></font>
+<br><br>
+<font size="5"><h5><u>Compound Interest</u></h5></font>
 <font size="6">
   \(A=P\left(1+\frac{R}{n}\right)^{n T}\)</font>
 <br>
 <br>
 <br>
-<h4>Annuity</h4>
+<font size="5">
+<h5><u>Annuity</u></h5></font>
 <font size="6">
   \(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n T}-1\right]}{\left(\frac{R}{n}\right)}\)</font>
 <br>
 <br>
 <br>
-<h4>Loan Payment</h4>
 <font size="6">
-  \(P M T=\frac{\left[P \times\left(\frac{R}{n}\right)\right]}{\left[1-\left(1+\frac{R}{n}\right)^{-n T}\right]}\) </font>   
+<h4><b><u>Loan Payment</u></b></h4></font>
+<br>
+<font size="6">
+  \(P M T=\frac{\left(P \times\frac{R}{n}\right)}{\left[1-\left(1+\frac{R}{n}\right)^{-n T}\right]}\) </font>   
      
 
 
