--- a/u1s5.html
+++ b/u1s5.html
@@ -145,6 +145,12 @@
 <h4>Simplify each expression. Show each step one at a time.</h4> 
 </p>
       <ol>
+        <li>\(7-24 \div 3 \times 4+6\)
+          <p class="solution">\(7-8 \times 4+6\)</p>
+          <p class="solution">\(7-32+6\)</p>
+          <p class="solution">\(-25+6\)</p>
+          <p class="solution">\(-19\)</p>
+        </li>
         <li> 	\(20(3+7)\)
                 <p class="solution"> \(20(10)\)</p>
                 <p class="solution"> \(200\)</p>
