--- a/u2s3.html
+++ b/u2s3.html
@@ -138,8 +138,8 @@
 
 <p>The graph below is called a scatter plot of points. A scatter plot is a collection of points showing the relationship between two variables. Sometimes, a trend may be recognized by these points, but at other times, there may be no trend as in the example below.</p>
 
-<img src="images/u2s3intro1.png" width="50%" height="50%" alt="The graph is a scatter plot of points. The x-axis represents the age of each person in years and the y-axis represents the height of each person in inches. the points that are plotted on the graph are (10,60), (15,62), (15,66), (20,60), (20,76), (30,72), (35,62), (35,68), (40,66), (50,64), (55,72), (60,62), (65,74), (70,68).">
-
+<img src="images/u2s3intro1.png" width="75%" height="75%" alt="The graph is a scatter plot of points. The x-axis represents the age of each person in years and the y-axis represents the height of each person in inches. the points that are plotted on the graph are (10,60), (15,62), (15,66), (20,60), (20,76), (30,72), (35,62), (35,68), (40,66), (50,64), (55,72), (60,62), (65,74), (70,68).">
+<br><br>
 <ol>
 
 <li>In this problem, 14 people were asked their age and their height was measured.  Answer the following questions based on the graph.</p>
@@ -290,7 +290,7 @@
 <li>If a company buys 6 30-second ads, what is the approximate cost of the advertisements? State your answer in a complete sentence.</li>
 <p class="solution">The approximate cost of a 6 30-second ads is $720,000</p>
 
-<li>If the cost of one ad buy is approximately $500,000, many 30-second ads were bought? State your answer in a complete sentence.</li>
+<li>If the cost of one ad buy is approximately $500,000, how many 30-second ads were bought? State your answer in a complete sentence.</li>
 <p class="solution">A $500,000 ad is approximately 4 30-second ads.</p>
 
 <li>What is the cost of a twelve-minute advertisement? How did you find this answer?</li>
