--- a/u2s4.html
+++ b/u2s4.html
@@ -208,6 +208,7 @@
 
 <p>Assume students were proportionally selected from 26 two-year institutions, 13 four-year public institutions and 13 four-year private institutions.</p>
 
+
 <p>Population</p>
 <p class="solution">All college students</p>
 
@@ -222,6 +223,10 @@
 
 <p>Type of Study</p>
 <p class="solution">Observational</p>
+
+<p>If the margin of error is +/-3%, find the confidence interval.</p>
+<p class="solution">70% +/- 3% = 67% - 73%</p>
+
 <p style="page-break-before: always"></p>
 <p><b>Tests of Cholesterol Drugs Offer Hope of Reducing Heart Attacks and Strokes</b></p>
 
@@ -252,7 +257,6 @@
 
 <p>March 28, 2023</p>
 
-<p>Voters now believe even more strongly that the United States is special among the nations of the world.</p>
 
 <p>For over twenty years, the Harvard Public Opinion Project has provided the most comprehensive look at the political opinions and voting trends held by Gen Z and Millennials. </p>
 <p>A national poll of America’s 18-to-29-year-olds conducted between March 13 and March 23, 2023 by the Institute of Politics at Harvard Kennedy School indicates that more than three-in-five (63%) believe our gun laws should be stricter -- including a majority of young people in college and not in college; a majority of young white, Black, Hispanic and Asian-Americans; a majority of males and females; and a majority of those living in urban areas, suburbs, and small towns.   </p>
