--- a/u2s9.html
+++ b/u2s9.html
@@ -173,7 +173,7 @@
       </tr>
       <tr>
         <td class="tg-s268"><p class="solution">Low = 345<br>Lower Quartile = 350<br>Median = 358<br>Upper Quartile = 375<br>High = 405</p></td>
-        <td class="tg-s6z2"><p class="solution">Low = 343<br>Lower Quartile = 370<br>Median = 389<br>Upper Quartile = 395<br>High = 402</p></td>
+        <td class="tg-s268"><p class="solution">Low = 343<br>Lower Quartile = 370<br>Median = 389<br>Upper Quartile = 395<br>High = 402</p></td>
       </tr>
     </table>
 
