--- a/u2s7.html
+++ b/u2s7.html
@@ -140,7 +140,7 @@
       <h2> Statistics Unit</h2>
   
 
-      <h3>2.7 Measures of Central Tendency (Mean/Median/Midrange)</h3>
+      <h3>2.7 Measures of Central Tendency (Mean/Median/Mode/Midrange)</h3>
 
       <p>Find the mean, median, and midrange for each of these data sets:</p>
       <ol>
