--- a/u3s2.html
+++ b/u3s2.html
@@ -174,7 +174,7 @@
       
 
        <li>&nbsp;&nbsp;&nbsp;500 yards = _______ miles</li>
-       <p class="solution">\(500\;yds\;\times\frac{1\;mile}{1760\;yds}=0.28 feet\)</p>
+       <p class="solution">\(500\;yds\;\times\frac{1\;mile}{1760\;yds}=0.28 \;miles\)</p>
     
           </ol>
           <p style="page-break-before: always">
