--- a/u3s4.html
+++ b/u3s4.html
@@ -142,7 +142,7 @@
 
       <h3>3.4 Problem Solving with Units</h3>
       <h4>Examples</h4>
-      <p>•	Consider paying $35.35 to fill a 15-gallon tank with gasoline. What is the price per gallon? How many gallons do you get for a dollar?</p>
+      <p>•	Consider paying $31.35 to fill a 15-gallon tank with gasoline. What is the price per gallon? How many gallons do you get for a dollar?</p>
 
 <p class="solution"> \(\begin{equation}
   \frac{\$ 31.35}{15 \text{ gal}}=\$ 2.09 \text{ per gallon}
@@ -217,7 +217,7 @@
     \frac{7.5 \text{ ml}}{1 \text { dose }} \times \frac{0.203 \text { tsp }}{1 \text{ ml}}=1.5 \text { tsp/dose } 
     \end{equation} \)</p>
     <p class="solution"> \(\begin{equation}
-        \frac{50 \text{ ml}}{1 \text { bottle }} \times \frac{0.203 \text { tsp }}{1 \text{ ml}}\times \frac{1 \text { dose }}{1.5 \text { tsp }}\times \frac{1 \text { day }}{3 \text { doses }}=2.26 \text{ days/bottle}
+     \frac{50\;mL}{1\;dose} \times \frac{1\; dose}{7.5\;mL} \times \frac{1\;day}{3\;doses}=\frac{50\;days}{22.5}= 2.2\;days
         \end{equation} \)</p>
        
         <p style="page-break-before: always"></p>
@@ -244,7 +244,7 @@
     <p class="solution">\(\begin{equation}
       \frac{2 \text{ miles}}{} \times \frac{1760 \text { yards }}{1 \text{ mile}}\times \frac{1 \text { lap }}{300 \text { yards }}=11.73 \text{ laps}
       \end{equation} \)</p>
-
+      <p class="solution">12 laps </p>
   </li>
   <li>A standard elevator in a midrise building can hold a maximum weight of about 1.5 tons.  Assuming an average adult weighs 160 pounds, what is the maximum number of adults who can safely ride in the elevator?
     <p class="solution">\(\begin{equation}
