--- a/u1s1.html
+++ b/u1s1.html
@@ -185,15 +185,15 @@
           </ol>
         </li>
         <p style="page-break-before: always"></p>
-        <li>Multiple choice. Which of the following is a correct interpretation of the statement “Women outnumbered men by a ratio of 9 to 5”?
+        <li>Multiple choice. Which of the following is a correct interpretation of the statement “Dogs outnumbered cats by a ratio of 9 to 5”?
           <ol>
-            <li> There were four more women than men.          </li>
-          <li>The number of women divided by the number of men was equal to the quotient \(5\div9\)</li>
-          <li>In the group, five out of nine fans were men.</li>
-          <li>The number of women was 1.8 times the number of men.</li>
+            <li> There were four more dogs than cats.          </li>
+          <li>The number of dogs divided by the number of cats was equal to the quotient \(5\div9\)</li>
+          <li>In the group, five out of nine fans were cats.</li>
+          <li>The number of dogs was 1.8 times the number of cats.</li>
           </ol>
         </li>
-        <p class="solution">D is the correct answer.  The number of women was 1.8 times the number of men</p>
+        <p class="solution">D is the correct answer.  The number of dogs was 1.8 times the number of cats.</p>
         <li>Madison can drive her car 480 miles at a steady speed using 15 gallons of gasoline. Complete the table showing the number of miles she can drive her car at this speed using the given amount of gasoline.
           <p class="solution">
              
