--- a/u4review.html
+++ b/u4review.html
@@ -228,10 +228,30 @@
 
 <p style="page-break-before: always"></p>
 
-<li>Draw a Venn diagram to represent the following information: At a high school 70 students are involved in cross country or swimming. Fifty students run cross country and 40 students are on the swim team. How many students both run cross country and belong to the swim team?</li>
-<p class="solution"><img src="images/u4reviewp8k.png" alt="A Venn Diagram with two intersecting circles. One circle represents the number of cross country runners and the other circle represents the number of swimmers. The number 20 is in the intersection of the circles. The number 30 is in the cross country circle and the number 20 is in the swimmer circle."></p>
-<p class="solution">20 students participated in both cross country and swimming</p>
+<li>Draw a Venn diagram to represent the following information: A survey asked 100 people what kind of movies they like to watch.  The results:
+  53 like comedies
+  50 like fantasy movies
+  60 like romantic movies
+  25 like comedy and fantasy
+  28 like romantic and fantasy
+  30 like comedy and romantic
+  5 like all three
 
+<p class="solution"><img src="images/Vennk.png" alt="A Venn Diagram with three intersecting circles.  The top circle is labeled Comedies.  The bottom left is labeled Fantasy, and the bottom right is labeled Romantic.  The intersection of the 3 circles in the middle has 5 in it.  The intersection of only romantic and fantasy has 23, only fantasy and comedies has 20 and only comedies and romantic has 25.  The parts of the diagram with no intersection have 7 for romantic, 2 for fantasy, and 3 for comedies.  There are 15 outside the diagram."></p>
+<ol>
+  <li>How many only like comedies?
+    <p class="solution">3</p>
+  </li>
+  <li>How many like fantasy or comedy?
+    <p class="solution">78</p>
+  </li>
+  <li>How many like comedy and romantic but not fantasy>
+    <p class="solution">25</p>
+  </li>
+</ol></p>
+
+</li>
+<br><br>
 <li>Test the validity of the following argument with a Venn diagram:</li>
 <br>
 <p>Premise: If an employee is regularly late, then the employee will be fired.</p>
