--- a/u4review.html
+++ b/u4review.html
@@ -155,7 +155,7 @@
 
 
 
-<style type="text/css">
+<!-- <style type="text/css">
     .tg  {border-collapse:collapse;border-spacing:0;}
     .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
@@ -202,7 +202,7 @@
 
     <p class="solution"><img src="images/u4reviewp4k.png" alt="A linear graph that increases from left to right. The x-axis represents the distance in miles and goes from 0 to 25 counting by 5. The y-axis represents the total cost in dollars and goes from 0 to 75 counting by 5. Two points on the graph are (0,40) and (30,65). "></p>
     
-    <p style="page-break-before: always"></p>
+    <p style="page-break-before: always"></p> -->
 
 
     <li>Joseph spent his vacation time in Kalamazoo, Michigan, a distance of 552 miles from his home. He drives home at an average speed of 55 mph.
