--- a/u4s5.html
+++ b/u4s5.html
@@ -160,7 +160,10 @@
         <p class="solution">$1500</p>
         <li>What would be the violin instructor's profit if he didn’t give any lessons in the week (y-intercept)?</li>
         <p class="solution">-$100</p>
-
+<li>What is the slope of this line?</li>
+<p class="solution">$40</p>
+<li>Write the equation of the line that represents the instructor's profit.</li>
+<p class="solution">\(y=40x-100\)</p>
     </ol>
 
     </li>
