--- a/u2s2.html
+++ b/u2s2.html
@@ -164,19 +164,24 @@
 <p> <img src="images/u2s2p4.png" alt=" There are three graphs. The horizontal axis on the first graph represents speed and the vertical axis represents age. Car A is low on the horizontal axis and low on the vertical axis. Car B is high on both axes. The horizontal axis on the second graph represents size and the vertical axis represents comfort. Car A is large in size and high on comfort. Car B is small in size and high on comfort. The horizontal axis on the third graph represents cost and the vertical axis represents miles per gallon. Car A is high in cost and low in miles per gallon. Car B is low in cost and high in miles per gallon. "> </p>
 
 
-<p> Which of the following statements are true?</p>
+<p> Determine if each following statements is true or false.</p>
 <ol>
-    <li>The older car is the slower car.</li>
-    <li>The larger car has a more comfortable ride.</li>
-    <li>The car with the better gas mileage costs more.</li>
-    <li>The faster car gets better gas mileage.</li>
-
-    <p class="solution">B and D are both true.</p>
-
+    <li>The older car is the slower car.
+      <inline class="solution">False  </inline>
+    </li>
+    <li>The larger car has a more comfortable ride.
+      <inline class="solution">True  </inline>
+    </li>
+    <li>The car with the better gas mileage costs more.
+      <inline class="solution">False  </inline>
+    </li>
+    <li>The faster car gets better gas mileage.
+      <inline class="solution">True </inline>
+    </li>
 
 </ol>
 </li>
-
+<br><br>
 <p>Place points A and B representing the two cars on the graphs below:</p>    
 
 
