--- a/u2s9.html
+++ b/u2s9.html
@@ -180,9 +180,9 @@
 </p>
 <li>Draw a double box-and-whisker plot of the above data on the scale below:</li>
 <img src="images/u2s9p1b.png" alt="The scale is a number line that goes from 340 to 410 counting by 10.">
-<p class="solution"><img src="images/u2s9p1bk.png" alt="The first box and whisker plot is for Snowboard Central. The far left whisker is at 343 and the far right whisker is at 402. The box is drawn with the left side being at 370, the median is at 389 and the right side of the box is at 395."></p>
-<p class="solution"><img src="images/u2s9p1ck.png" alt="The box and whisker plot is for Middletown Snowboards. The far left whisker is at 345. The far right whisker is at 405. The box is drawn with 350 on the left side, 358 is the median and 375 is the right side of the box."></p>
 
+<p class="solution"><img src="images/u2s9p1ck.png" alt="The box and whisker plot is for Middletown Snowboards. The far left whisker is at 345. The far right whisker is at 405. The box is drawn with 350 on the left side, 358 is the median and 375 is the right side of the box."></p>
+<p class="solution"><img src="images/u2s9p1bk.png" alt="The box and whisker plot is for Snowboard Central. The far left whisker is at 343 and the far right whisker is at 402. The box is drawn with the left side being at 370, the median is at 389 and the right side of the box is at 395."></p>
 
 <li>What is the median price for a snowboard at Middletown Snowboards?</li>
 <p class="solution">$358</p>
