--- a/u2s10.html
+++ b/u2s10.html
@@ -164,8 +164,11 @@
     <p>Examples of things that are normally distributed.
       <ul>
         <li>Birthweight of Babies</li>
+        <img src="images/u2s10introa.png" alt="A histogram of the distribution of Newborn Weights.  Frequency in thousands is labeled on the y axis and Weight in pounds is labeled on the x axis.  The y-axis ranges from 0 at the bottom to 160 at the top in intervals of 20.  The x-axis ranges from 6.7 to 8.5 in intervals of 0.1, with each bar of the histogram over one of the numbers. Each bar of the histogram gets higher from left to right until the middle of the graph when they go back down.  The bars are symmetric on either side of the middle bar.">
         <li>ACT Scores</li>
+        <img src="images/u2s10introb.png" alt="A histogram of the distribution of ACT Scores.  Frequency in thousands is labeled on the y axis and the score is labeled on the x axis.  The y-axis ranges from 0 at the bottom to 160 at the top in intervals of 20.  The x-axis ranges from 13 to 31 in intervals of 1, with each bar of the histogram over one of the numbers. Each bar of the histogram gets higher from left to right until the middle of the graph when they go back down.  The bars are symmetric on either side of the middle bar.">
         <li>Average NFL Player Retirement Age</li>
+        <img src="images/u2s10introb.png" alt="A histogram of the distribution of NFL Player Retirement Ages.  Frequency  is labeled on the y axis and the age is labeled on the x axis.  The y-axis ranges from 0 at the bottom to 160 at the top in intervals of 20.  The x-axis ranges from 25 to 43 in intervals of 1, with each bar of the histogram over one of the numbers. Each bar of the histogram gets higher from left to right until the middle of the graph when they go back down.  The bars are symmetric on either side of the middle bar.">
       </ul>
     </p>
     source https://www.statology.org/example-of-normal-distribution/
