--- a/u4review.html
+++ b/u4review.html
@@ -148,7 +148,7 @@
 
 <p style="page-break-before: always"></p>
 
-<li>The U-Haul in Knoxville charges $39.95 for a 20 foot moving truck plus $0.89 per mile that a customer drives the truck over one weekend. Write a linear equation that models the total cost of the truck for one weekend. Complete a table of values for the equation and graph the equation.</li>
+<li>The U-Haul in Knoxville charges $39.95 for a 20 foot moving truck plus $0.89 per mile that a customer drives the truck over one weekend. Write a linear equation that models the total cost of the truck for one weekend.</li>
 
 <p>Equation:</p>
 <p class="solution">y = 0.89x + 39.95</p>
