--- a/u4s8.html
+++ b/u4s8.html
@@ -217,13 +217,14 @@
     <img src="images/pizzavenn.png" alt="A 3-circle Venn diagram with the upper left circle marked P, the upper right marked S and the lower circle marked O."width="25%" height="25%">
   </li>
 
-  <img src="images/pizzavennk.png" alt="4 3-circle Venn diagrams with the upper left circle marked P, the upper right marked S and the lower circle marked O.  The first Venn diagram shows the pepperoni and onion pizza with the oval that overlaps P & O shaded.  The 2nd shows the cheese pizza with entire area outside all the circles shaded.  The 3rd shows the Veggie pizza with the entire O circle shaded only where it does not overlap P or S.  The 4th shows the supreme with the intersection of the 3 circles shaded..">
+  <p class="solution"> <img src="images/pizzavennk.png" alt="4 3-circle Venn diagrams with the upper left circle marked P, the upper right marked S and the lower circle marked O.  The first Venn diagram shows the pepperoni and onion pizza with the oval that overlaps P & O shaded.  The 2nd shows the cheese pizza with entire area outside all the circles shaded.  The 3rd shows the Veggie pizza with the entire O circle shaded only where it does not overlap P or S.  The 4th shows the supreme with the intersection of the 3 circles shaded.."></p>
 
      </li>
 
      <p style="page-break-before: always"></p>
 
      <img src="images/u4s8p1.png" alt="A Venn diagram of Mrs. Mac's kindergarten class. There are three intersectings circles in the diagram.  The circle on the top left is labeled can read.  The circle on the top right is labeled left-handed.  The circle on the bottom is labeled can count to 100.  The intersection of all three circles has a 1 in it.  The intersection of the can count to 100 and left-handed is empty.  The intersection of can count to 100 and can read is 4, and the intersection of can read and left-handed is 2.  The can read area with no intersection with the other circles is 6, left-handed 5, and can count to 100 3.  There are 4 students outside all the circles.">
+ 
  
  
  
