--- a/u1s9.html
+++ b/u1s9.html
@@ -140,7 +140,10 @@
       <h2>Finance Unit</h2>
   
 
-      <h3>1.9 Car Loans </h3>
+      <h3>1.9 Loans </h3>
+      <br>
+      <h4>Buying a Car</h4>
+      <br>
  <ol>
 
 <li>Using the given advertisement, identify the
@@ -160,9 +163,9 @@
 </li>
 
 <li>Find an auto loan by shopping online. <a href="https://www.bankrate.com/">(Link to Bankrate.com)</a> Select 
-<p>1)	<u><font color="red">AUTO LOANS</font></u></p>
-<p>2)   <u>	<font color="red">PURCHASE AND</font></u></p>
-<p>3)	<u><font color="red">SELECT A PRODUCT</font></u></p>
+<p>1)	<u><font color="red">LOANS</font></u></p>
+<p>2)   <u>	<font color="red">AUTO LOANS</font></u></p>
+<p>3)	<u><font color="red">BEST AUTO LOANS</font></u></p>
 <ol>
 <li>Length of loan: ____________________
   <p class="solution">60 months</p>
@@ -185,25 +188,51 @@
 </li>
 
 <li>Calculate the total amount paid over the life of the loan: ____________________
-  <p class="solution"> \(512.81*12*5=\$30768.60\)</p>
+  <p class="solution"> \(512.81*12*5=\$30,768.60\)</p>
+    </li>
+    <li>How much interest did you pay on this loan?
+      <p class="solution"> \($30,768.60-$25,345=$5423.60\)</p>
     </li>
     <p style="page-break-before: always"></p>
-    <li>Now suppose you want to buy this same car, but you started saving for it five years ago.  You just put the money aside in a cookie jar under your bed. How much money would you have needed to save per month for the last five years to accumulate enough money to buy the car without a loan?
+    <h4>Buying a House</h4>
+    <br>
+   <p>You buy a house for $290,000 with a 30 year mortgage at 6.7% interest.</p>
+   <br>
 
-    <p>Monthly savings needed: ____________________</p>
-    <p class="solution"> \(25345/60=\$422.42\)</p>
+    <ol>
+    <li>If your down payment is 5%, how much is the down payment?
+
+    <p>Down Payment: ____________________</p>
+    <p class="solution"> \(290,000(0.05)=14,500\)</p>
+    <p class="solution"> The down payment is $14,500.</p>
   </li>
 
-    <li>What if you had been saving for the past five years by making monthly deposits in a mutual fund that effectively paid 5% interest on your investment? How much money would you have needed to invest per month for the last five years to accumulate enough money to buy the car? Use the annuity formula where A is the price of your car.  Solve for the PMT. Show formula and calculations used.
+    <li>What is your mortgage/loan amount? (In other words, how much do you borrow from the bank?)
 
-    <p>Monthly savings needed: ____________________</p>
-    <p class="solution">\(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n T}-1\right]}{\left(\frac{R}{n}\right)}\) </p>
-    <p class="solution">\(25345=PMT\frac{\left[\left(1+{\displaystyle\frac{.05}{12}}\right)^{12\ast5}-1\right]}{\left({\displaystyle\frac{.05}{12}}\right)}\)</p>
-    <p class="solution">$372.69</p>
+    <p>Mortgage amount: ____________________</p>
+    <p class="solution">\(290,000-14,500=275,500\) </p>
+   
+    <p class="solution">The mortgage amount is $275,500</p>
   </li>
 
-    <li>Compare taking out a loan to buy a car versus saving in advance to buy a car. Which would you do and why?</li>
+    <li>What is your monthly payment?
+      <p>Monthly Payment: ______________      </p>
+      <p class="solution">\(PMT=\frac{(P\times{\displaystyle\frac rn})}{\left[1-\left(1+{\displaystyle\frac rn}\right)^{-nt}\right]}\)</p> 
+      
+      <p class="solution">\(PMT=\frac{(275,500\times{\displaystyle\frac{0.067}{12}})}{\left[1-\left(1+{\displaystyle\frac{0.067}{12}}\right)^{-12\ast30}\right]}\)</p>
+      <p class="solution">The monthly payment is $1330.95</p>
+    </li>
 
+    <li> What is the total amount you pay towards the <b>mortgage</b> at the end of the 30 years?
+      <p class="solution">\(1330.95(12)(30) = $479,142\)</p>
+
+    </li>
+
+    <li> How much of the total payment towards the <b>mortgage</b> is interest payment?
+      <p class="solution">\($479,142 - $275,500 = $203,642\)</p>
+    </li>
+
+  </ol>
 
  </ol>
 
